# courtlistener-api-client

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGES.md  Dockerfile  MCP_README.md  Makefile  README.md  REMOTE_MCP_PROPOSAL.md  docker-compose.yml  docker-entrypoint.sh  monitor-pypi-for-evil-packages.yml  pyproject.toml  scan_pypi.py  tox.ini
.github/workflows/: deploy.yml  monitor-pypi-for-evil-packages.yml
courtlistener/: __init__.py  alerts.py  citation_lookup.py  client.py  exceptions.py  mcp_server.py  resource.py  utils.py
courtlistener/mcp/: app.py  auth.py  main.py  middleware.py  prompts.py  server.py  session.py
courtlistener/mcp/tools/: __init__.py  analyze_citations_tool.py  call_endpoint_tool.py  citation_utils.py  create_search_alert_tool.py  delete_search_alert_tool.py  extract_citations_tool.py  get_choices_tool.py  get_counts_tool.py  get_endpoint_item_tool.py  get_endpoint_schema_tool.py  get_more_results_tool.py  mcp_tool.py  read_document_tool.py  resume_citation_analysis_tool.py  search_document_tool.py  search_tool.py  subscribe_to_docket_alert_tool.py  unsubscribe_from_docket_alert_tool.py  utils.py
courtlistener/mcp_tools/: __init__.py  call_endpoint_tool.py  get_choices_tool.py  get_counts_tool.py  get_endpoint_item_tool.py  get_endpoint_schema_tool.py  get_more_results_tool.py  healthcare_legal_tool.py  mcp_tool.py  search_tool.py  utils.py
courtlistener/models/: __init__.py  endpoint.py  page.py
courtlistener/models/endpoints/: __init__.py  aba_ratings.py  agreements.py  alerts.py  (+46 more)
scripts/: court_choices.json  generate_models.py
staging/oauth-app/: Dockerfile  manage.py  requirements.txt
templates/: endpoint.jinja2  endpoints_init.jinja2  filter.jinja2  filters_init.jinja2
tests/: conftest.py  test_alert_tools.py  test_alerts.py  test_auth.py  test_citation_lookup.py  test_citation_tools.py  test_citation_utils.py  test_dockets.py  test_dump_load.py  test_endpoint_schema.py  test_endpoints.py  test_exceptions.py  test_healthcare_legal_tool.py  test_mcp_mutation_errors.py  test_opinions.py  test_pagination.py  test_search.py  test_session.py  test_session_migration.py  test_tool_annotations.py
(+16 files in other folders)
