[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]

[project]
name = "courtlistener-api-client"
version = "0.0.2"
description = "Python SDK for the Court Listener API"
authors = [{ name = "Free Law Project", email = "info@free.law" }]
requires-python = ">=3.13"
readme = "README.md"
license = "BSD-2-Clause"
keywords = [
    "legal",
    "courts",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

urls.Repository = "https://github.com/freelawproject/courtlistener-api-client"
urls."Organisation Homepage" = "https://free.law/"

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "mcp>=1.0.0",
    "tiktoken>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "click>=8.0.0",
    "jinja2>=3.0.0",
    "mypy>=1.10.0",
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "python-dotenv>=1.0.0",
    "ruff>=0.4.0",
    "tox-uv>=1.29.0",
]

[project.scripts]
courtlistener-mcp = "courtlistener.mcp_server:main"

[tool.setuptools]
packages = [ "courtlistener" ]

[tool.ruff]
line-length = 79
lint.extend-safe-fixes = [
  # non-pep585-annotation
  "UP006",
]
lint.select = [
  # flake8-bugbear
  "B",
  # flake8-comprehensions
  "C4",
  # pycodestyle
  "E",
  # Pyflakes errors
  "F",
  # isort
  "I",
  # flake8-simplify
  "SIM",
  # flake8-tidy-imports
  "TID",
  # pyupgrade
  "UP",
  # Pyflakes warnings
  "W",
]
lint.ignore = [
  # flake8-bugbear opinionated rules
  "B9",
  # line-too-long
  "E501",
  # suppressible-exception
  "SIM105",
  # if-else-block-instead-of-if-exp
  "SIM108",
  # printf-string-formatting
  "UP031",
]
